--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -123,7 +123,7 @@
     width: 400px;
     height: 470px;
     border-radius: 20px;
-    margin: 70px 420px;
+    margin: 70px 520px;
     background: #C4C4C4;
     position: absolute;
 }
@@ -144,6 +144,14 @@
     margin: 300px 0px;
     background: #C4C4C4;
     position: absolute;
+}
+
+#a3-image{
+    width: 300px;
+    border-radius: 20px;
+    position: absolute;
+    margin: 200px 750px;
+    border: 5px solid white ;
 }
 
 #about-us-third-part{
