--- a/css/animal.css
+++ b/css/animal.css
@@ -8,14 +8,14 @@
 
 #page-background{
     width: 100%;
-    height: 1000px;
+    height: 950px;
     float: left;
-    /* background: red; */
+    /* background: yellow; */
 }
 
 #page-background1{
     width:1200px;
-    height: 1000px;
+    height: 950px;
     margin: auto;
     /* background: green; */
 }
@@ -68,6 +68,57 @@
 }
 
 /* Header End */
+
+/* Page Content Start */
+
+#page-content{
+    width: 1200px;
+    height: 730px;
+    float: left;
+    /* background: red; */
+}
+
+body{
+    min-height: 100vh;
+    overflow-x: hidden;
+}
+
+#animale-box{
+    width: 1200px;
+    height: 50px;
+    background: #C4C4C4;
+    float: left;
+    border-radius: 10px;
+    font-family: 'Red Hat Display', sans-serif;
+}
+
+#animale-name{
+    font-family: 'Red Hat Display', sans-serif;
+    font-size: 40px;
+    font-weight: 900;
+    text-align: center;
+}
+.main{
+    width: 1200px;
+    height: 800px;
+    justify-content: center;
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(390px,390px));
+    /* background: red; */
+    float: left;
+}
+
+#img1{
+    width: 370px;
+    height: 370px;
+    float: left;
+    object-fit: cover;
+    object-position: center;
+}
+
+
+/* Page Content End */
 
 /* Footer Start */
 #footer-outer{
@@ -220,28 +271,3 @@
 }
 /* Footer End */
 
-body{
-    min-height: 100vh;
-    overflow-x: hidden;
-}
-h1{
-    text-align: center;
-}
-.main{
-    position: absolute;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    width: 100vw;
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(400px,400px));
-    column-gap: 10px;
-    row-gap: 10px;
-}
-
-img{
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-    object-position: center;
-}
