Update the bird.html page

--- a/css/animal.css
+++ b/css/animal.css
@@ -269,5 +269,8 @@ body{
     text-align: center;
     font-family: 'Red Hat Display', sans-serif;
 }
+
+/* Copyright background end */
+
 /* Footer End */
 
