--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -314,4 +314,7 @@
     text-align: center;
     font-family: 'Red Hat Display', sans-serif;
 }
+
+/* Copyright background end */
+
 /* Footer End */
