--- a/css/gallery.css
+++ b/css/gallery.css
@@ -8,14 +8,14 @@
 
 #page-background{
     width: 100%;
-    height: 1000px;
+    height: 1090px;
     float: left;
-    /* background: red; */
+    /* background: yellow; */
 }
 
 #page-background1{
     width:1200px;
-    height: 1000px;
+    height: 1090px;
     margin: auto;
     /* background: green; */
 }
@@ -68,6 +68,181 @@
 }
 
 /* Header End */
+
+/* Page Content Start */
+
+#page-content{
+    width: 1200px;
+    height: 1000px;
+    float: left;
+    /* background: red; */
+}
+
+body{
+    min-height: 100vh;
+    overflow-x: hidden;
+}
+
+/*Gallery css*/
+
+#gallery-box{
+    width: 1200px;
+    height: 50px;
+    background: #C4C4C4;
+    float: left;
+    border-radius: 10px;
+    font-family: 'Red Hat Display', sans-serif;
+}
+
+#gallery-name{
+    font-family: 'Red Hat Display', sans-serif;
+    font-size: 40px;
+    font-weight: 900;
+    text-align: center;
+}
+
+#gallery{
+    width: 50%;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    float: left;
+}
+
+h1{
+    text-align: center;
+}
+
+#galleryMain{
+    width: 1200px;
+    height: 800px;
+    margin: auto;
+    /* background: chocolate; */
+}
+
+#animal-background{
+    width: 350px;
+    height: 630px;
+    background: #C4C4C4;
+    border-radius: 20px;
+    margin-top: 50px;
+    margin-left: 5px;
+    position: absolute;
+}
+
+#animal{
+    width: 340px;
+    height:450px;
+    border-radius:20px;
+    float:left;
+    margin-top:110px;
+    border: 10px solid white ;
+    position: absolute;
+}
+
+#link-animal{
+    text-decoration: none;
+}
+
+.animal-home{
+    width:auto;
+    height:auto;
+    font-family: 'Red Hat Display', sans-serif;
+    color: black;
+    font-size:50px;
+    margin-top: 540px;
+    margin-left: 20px;
+    position: absolute;
+}
+
+#bird-background{
+    width: 350px;
+    height: 630px;
+    background: #C4C4C4;
+    border-radius: 20px;
+    margin-top: 300px;
+    margin-left: 430px;
+    position: absolute;
+}
+
+#bird{
+    width:350px;
+    height:300px;
+    border-radius:20px;
+    float:left;
+    margin:420px 420px;
+    border: 10px solid white ;
+    position: absolute;
+}
+
+#link-bird{
+    text-decoration: none;
+}
+
+.bird-home{
+    width:auto;
+    height:auto;
+    font-family: 'Red Hat Display', sans-serif;
+    color: black;
+    font-size:50px;
+    margin-top: 530px;
+    margin-left: 120px;
+    position: absolute;
+}
+
+#pet-background{
+    width: 350px;
+    height: 630px;
+    background: #C4C4C4;
+    border-radius: 20px;
+    margin-top: 50px;
+    margin-left: 850px;
+    position: absolute;
+}
+
+#pet{
+    width: 340px;
+    height:450px;
+    border-radius:20px;
+    float:left;
+    margin-top:110px;
+    margin-left: 850px;
+    border: 10px solid white ;
+    position: absolute;
+}
+
+#pet-animal{
+    text-decoration: none;
+}
+
+.pet-home{
+    width:auto;
+    height:auto;
+    font-family: 'Red Hat Display', sans-serif;
+    color: black;
+    font-size:50px;
+    margin-top: 540px;
+    margin-left: 20px;
+    position: absolute;
+}
+
+/* #pet{
+    width:400px;
+    height:300px;
+    background-color: rgb(163, 160, 160);
+    background-image: url(../images/dogs.jpg);
+    background-size: cover;
+    border-radius:20px;
+    float:left;
+    margin-left:200px;
+    margin-top:100px;
+    text-align:center;
+    color: #2c5383;
+    background-position: right;
+} */
+/*gallery css ends*/
+
+/* Page Content End */
 
 /* Footer Start */
 #footer-outer{
@@ -219,76 +394,3 @@
     font-family: 'Red Hat Display', sans-serif;
 }
 /* Footer End */
-
-/*Gallery css*/
-#gallery{
-    width: 50%;
-    height: 500px;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    float: left;
-}
-
-h1{
-    text-align: center;
-}
-
-#galleryMain{
-    width: 1500px;
-    height: 400px;
-    margin: auto;
-}
-
-#animal{
-    width:400px;
-    height:300px;
-    background-color: rgb(163, 160, 160);
-    background-image: url(../images/animals.jpg);
-    background-size: cover;
-    border-radius:20px;
-    float:left;
-    margin-left:200px;
-    margin-top:100px;
-    text-align:center;
-    color: #2c5383;
-    background-position: left;
-}
-
-.gallery-home{
-    width:auto;
-    height:auto;
-    font-family:Lato Black;
-    font-size:50px;
-    padding:30px;
-}
-
-#bird{
-    width:400px;
-    height:300px;
-    background-color: rgb(163, 160, 160);
-    background-image: url(../images/birds.jpg);
-    background-size: cover;
-    border-radius:20px;
-    float:left;
-    margin-left:200px;
-    margin-top:100px;
-    text-align:center;
-    color: #2c5383;
-    background-position: center;
-}
-#pet{
-    width:400px;
-    height:300px;
-    background-color: rgb(163, 160, 160);
-    background-image: url(../images/dogs.jpg);
-    background-size: cover;
-    border-radius:20px;
-    float:left;
-    margin-left:200px;
-    margin-top:100px;
-    text-align:center;
-    color: #2c5383;
-    background-position: right;
-}
-/*gallery css ends*/
-
