--- a/css/home.css
+++ b/css/home.css
@@ -8,14 +8,14 @@
 
 #page-background{
     width: 100%;
-    height: 1000px;
+    height: 1540px;
     float: left;
     /* background: red; */
 }
 
 #page-background1{
     width:1200px;
-    height: 1000px;
+    height: 1440px;
     margin: auto;
     /* background: green; */
 }
@@ -71,50 +71,130 @@
 
 /*page content start*/
 #page-content{
-    width: 800px;
-    height: 700px;
+    width: 1200px;
+    height: 1350px;
     float: left;
+    /* background: yellow; */
 }
 
 #home-box{
-    width: 1100px;
-    height: 180px;
+    width: 1000px;
+    height: 260px;
     border-radius: 20px;
     margin-left: 50px;
-    padding: 1% 2%;
+    margin-top: 10px;
+    padding: 5% 5%;
+    font-family: 'Red Hat Display', sans-serif;
     background: #C4C4C4;
     justify-content: center;
 }
 
-/* #dog{
+#description{
+    width: 950px;
+    height: 280px;
+    /* background: red; */
+}
+
+#animal-image{
+    width: 1200px;
+    height: 240px;
+    /* background: red; */
+}
+
+#dog1{
+    width: 283px;
+    height: 180px;
     padding: 30px 4px;
     float: left;
+    /* background: blue; */
 }
 
-#tiger{
-    padding: 30px 20px;
+#tiger1{
+    width: 283px;
+    height: 180px;
+    padding: 30px 10px;
     float: left;
-    height: 80px;
 }
 
-#bird1{
-    padding: 30px 20px;
-    float: right;
-    height: 80px;
-    margin: auto;
-} */
-#animal-image{
-    display: flex;
-}
-#dog,#tiger,#bird1,#bird2{
-    flex: 40%;
-    padding: 20px;
+#bird1-1{
+    width: 283px;
+    height: 180px;
+    padding: 30px 10px;
+    float: left;
 }
 
+#bird2-1{
+    width: 283px;
+    height: 180px;
+    padding: 30px 10px;
+    float: left;
+}
 
-/* img{
-    width: 100%;
-} */
+#reviews-box{
+    width: 1200px;
+    height: 50px;
+    background: #C4C4C4;
+    float: left;
+    border-radius: 10px;
+    font-family: 'Red Hat Display', sans-serif;
+}
+
+#reviews-name{
+    font-family: 'Red Hat Display', sans-serif;
+    font-size: 40px;
+    font-weight: 900;
+    text-align: center;
+}
+
+#reviews-content-part1{
+    width: 500px;
+    height: 450px;
+    font-family: 'Red Hat Display', sans-serif;
+    background: #cac8c8;
+    border-radius: 20px;
+    margin-top: 40px;
+    float: left;
+}
+
+#part1-image{
+    width: 150px;
+    margin: 30px 30px;
+    float: left;
+}
+
+#part1-content{
+    width: 250px;
+    margin-top: 30px;
+    line-height: 30px;
+    float: left;
+    /* background: yellow; */
+}
+
+#reviews-content-part2{
+    width: 500px;
+    height: 470px;
+    font-family: 'Red Hat Display', sans-serif;
+    background: #cac8c8;
+    border-radius: 20px;
+    margin-top: 40px;
+    position: absolute;
+    margin: 200px 700px;
+}
+
+#part2-image{
+    width: 150px;
+    margin: 30px 30px;
+    float: left;
+}
+
+#part2-content{
+    width: 250px;
+    margin-top: 30px;
+    line-height: 30px;
+    float: left;
+    /* background: yellow; */
+}
+
 /*page content ends*/
 
 /* Footer Start */
