Make the home page mobile responsive for 360px x 640px screen size

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -242,6 +242,7 @@ h1{
     width: 1200px;
     height: 80px;
     margin: auto;
+    background: #C6C6F4;
     font-family: 'Red Hat Display', sans-serif;
 }
 
@@ -376,6 +377,7 @@ h1{
     width: 1200px;
     height: 20px;
     margin: auto;
+    background: #718CD1;
     text-align: center;
     font-family: 'Red Hat Display', sans-serif;
 }
