--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -177,6 +177,7 @@
     width: 1200px;
     height: 80px;
     margin: auto;
+    background: #C6C6F4;
     font-family: 'Red Hat Display', sans-serif;
 }
 
@@ -311,6 +312,7 @@
     width: 1200px;
     height: 20px;
     margin: auto;
+    background: #718CD1;
     text-align: center;
     font-family: 'Red Hat Display', sans-serif;
 }
