--- a/css/birds.css
+++ b/css/birds.css
@@ -132,6 +132,7 @@ body{
     width: 1200px;
     height: 80px;
     margin: auto;
+    background: #C6C6F4;
     font-family: 'Red Hat Display', sans-serif;
 }
 
@@ -266,6 +267,7 @@ body{
     width: 1200px;
     height: 20px;
     margin: auto;
+    background: #718CD1;
     text-align: center;
     font-family: 'Red Hat Display', sans-serif;
 }
